// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BlogRenderer /> should render correctly - index 1`] = `
<div>
  <div
    class="skeleton__outer skeleton__section"
  >
    <div
      class="skeleton__shimmer"
      style="margin-left: -0px;"
    />
  </div>
  <div
    class="skeleton__outer skeleton__card blog-renderer__body-skeleton"
  >
    <div
      class="skeleton__shimmer"
      style="margin-left: -0px;"
    />
  </div>
  <div
    class="creative-commons__wrapper"
  >
    <div
      class="creative-commons__background"
    />
    <div
      class="subsection__outer creative-commons__inner"
    >
      <h3
        class="subsection__heading"
        id="copyright"
      >
        Copyright
      </h3>
      <span
        class="sc-fnykZs kIjAem"
      >
        Most of my photos are licensed under
         
        <a
          aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
          class="sc-crXcEl lmkZeE"
          href="https://creativecommons.org/licenses/by-sa/3.0/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Creative Commons BY-SA 3.0
          <div
            class="sc-evZas gLzuUv"
          >
            <svg
              class="sc-iqcoie chQRol sc-breuTD ktuGc"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        .
        <br />
        If you are unsure about your right to use them please 
        <a
          class="sc-crXcEl lmkZeE"
          href="/contact"
        >
          contact me
        </a>
        .
      </span>
    </div>
  </div>
</div>
`;

exports[`<BlogRenderer /> should render correctly with blog 1`] = `
<div>
  <a
    class="sc-crXcEl lmkZeE page-title__link"
    href="/blogs"
  >
    ⇠ Blogs
  </a>
  <h1
    class="page-title__heading page-title__heading--with-link"
  >
    St. Ives ⛵ 2018
  </h1>
  <div
    class="blog-renderer__date"
  >
    <span
      class="sc-eCYdqJ iiRHQc sc-gKXOVf hCxNQk"
    >
      Published 
      TEST_DATE
    </span>
  </div>
  <div
    class="blog-renderer__tag-list"
  >
    <div
      class="sc-bjUoiL blog-renderer__tag"
    >
      <span
        class="sc-idiyUo ijulBS"
        type="travel"
      >
        Travel
      </span>
    </div>
  </div>
  <div
    class="markdown-renderer__outer"
  >
    <span
      class="sc-fnykZs kIjAem markdown-renderer__element markdown-renderer__paragraph"
    >
      Some content with 
      <a
        aria-label="a link (opens in a new tab)"
        class="sc-crXcEl lmkZeE"
        href="https://duckduckgo.com/"
        rel="noopener noreferrer"
        target="_blank"
      >
        a link
        <div
          class="sc-evZas gLzuUv"
        >
          <svg
            class="sc-iqcoie chQRol sc-breuTD ktuGc"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
            />
          </svg>
        </div>
      </a>
      <br />
    </span>
  </div>
  <div
    class="creative-commons__wrapper"
  >
    <div
      class="creative-commons__background"
    />
    <div
      class="subsection__outer creative-commons__inner"
    >
      <h3
        class="subsection__heading"
        id="copyright"
      >
        Copyright
      </h3>
      <span
        class="sc-fnykZs kIjAem"
      >
        Most of my photos are licensed under
         
        <a
          aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
          class="sc-crXcEl lmkZeE"
          href="https://creativecommons.org/licenses/by-sa/3.0/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Creative Commons BY-SA 3.0
          <div
            class="sc-evZas gLzuUv"
          >
            <svg
              class="sc-iqcoie chQRol sc-breuTD ktuGc"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        .
        <br />
        If you are unsure about your right to use them please 
        <a
          class="sc-crXcEl lmkZeE"
          href="/contact"
        >
          contact me
        </a>
        .
      </span>
    </div>
  </div>
</div>
`;

exports[`<BlogRenderer /> should render correctly with blog and admin 1`] = `
<div>
  <a
    class="sc-crXcEl lmkZeE page-title__link"
    href="/blogs"
  >
    ⇠ Blogs
  </a>
  <h1
    class="page-title__heading page-title__heading--with-link"
  >
    St. Ives ⛵ 2018
  </h1>
  <div
    class="blog-renderer__date"
  >
    <span
      class="sc-eCYdqJ iiRHQc sc-gKXOVf hCxNQk"
    >
      Published 
      TEST_DATE
    </span>
  </div>
  <div
    class="blog-renderer__tag-list"
  >
    <div
      class="sc-bjUoiL blog-renderer__tag"
    >
      <span
        class="sc-idiyUo ijulBS"
        type="travel"
      >
        Travel
      </span>
    </div>
  </div>
  <div
    class="markdown-renderer__outer"
  >
    <span
      class="sc-fnykZs kIjAem markdown-renderer__element markdown-renderer__paragraph"
    >
      Some content with 
      <a
        aria-label="a link (opens in a new tab)"
        class="sc-crXcEl lmkZeE"
        href="https://duckduckgo.com/"
        rel="noopener noreferrer"
        target="_blank"
      >
        a link
        <div
          class="sc-evZas gLzuUv"
        >
          <svg
            class="sc-iqcoie chQRol sc-breuTD ktuGc"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
            />
          </svg>
        </div>
      </a>
      <br />
    </span>
  </div>
  <div
    class="section__outer"
  >
    <h2
      class="section__heading"
      id="edit-blog"
    >
      EDIT BLOG
    </h2>
    <div>
      BLOG_FORM
    </div>
  </div>
  <div
    class="creative-commons__wrapper"
  >
    <div
      class="creative-commons__background"
    />
    <div
      class="subsection__outer creative-commons__inner"
    >
      <h3
        class="subsection__heading"
        id="copyright"
      >
        Copyright
      </h3>
      <span
        class="sc-fnykZs kIjAem"
      >
        Most of my photos are licensed under
         
        <a
          aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
          class="sc-crXcEl lmkZeE"
          href="https://creativecommons.org/licenses/by-sa/3.0/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Creative Commons BY-SA 3.0
          <div
            class="sc-evZas gLzuUv"
          >
            <svg
              class="sc-iqcoie chQRol sc-breuTD ktuGc"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        .
        <br />
        If you are unsure about your right to use them please 
        <a
          class="sc-crXcEl lmkZeE"
          href="/contact"
        >
          contact me
        </a>
        .
      </span>
    </div>
  </div>
</div>
`;

exports[`<BlogRenderer /> should render correctly with blog load error 1`] = `
<div>
  <span
    class="sc-fnykZs kIjAem"
  >
    <span
      class="sc-dIouRR HZIpG"
    >
      This blog couldn't be loaded
      <br />
      Some error
    </span>
  </span>
  <div
    class="skeleton__outer skeleton__section"
  >
    <div
      class="skeleton__shimmer"
      style="margin-left: -0px;"
    />
  </div>
  <div
    class="skeleton__outer skeleton__card blog-renderer__body-skeleton"
  >
    <div
      class="skeleton__shimmer"
      style="margin-left: -0px;"
    />
  </div>
  <div
    class="subsection__outer loading-cover__overlay--content"
  >
    <h3
      class="subsection__heading subsection__heading--no-padding"
      id="this-is-taking-a-while.-maybe-something-isn't-quite-right..."
    >
      This is taking a while. Maybe something isn't quite right...
    </h3>
  </div>
  <div
    class="creative-commons__wrapper"
  >
    <div
      class="creative-commons__background"
    />
    <div
      class="subsection__outer creative-commons__inner"
    >
      <h3
        class="subsection__heading"
        id="copyright"
      >
        Copyright
      </h3>
      <span
        class="sc-fnykZs kIjAem"
      >
        Most of my photos are licensed under
         
        <a
          aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
          class="sc-crXcEl lmkZeE"
          href="https://creativecommons.org/licenses/by-sa/3.0/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Creative Commons BY-SA 3.0
          <div
            class="sc-evZas gLzuUv"
          >
            <svg
              class="sc-iqcoie chQRol sc-breuTD ktuGc"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        .
        <br />
        If you are unsure about your right to use them please 
        <a
          class="sc-crXcEl lmkZeE"
          href="/contact"
        >
          contact me
        </a>
        .
      </span>
    </div>
  </div>
</div>
`;

exports[`<BlogRenderer /> should render correctly with initial state 1`] = `
<div>
  <div
    class="skeleton__outer skeleton__section"
  >
    <div
      class="skeleton__shimmer"
      style="margin-left: -0px;"
    />
  </div>
  <div
    class="skeleton__outer skeleton__card blog-renderer__body-skeleton"
  >
    <div
      class="skeleton__shimmer"
      style="margin-left: -0px;"
    />
  </div>
  <div
    class="creative-commons__wrapper"
  >
    <div
      class="creative-commons__background"
    />
    <div
      class="subsection__outer creative-commons__inner"
    >
      <h3
        class="subsection__heading"
        id="copyright"
      >
        Copyright
      </h3>
      <span
        class="sc-fnykZs kIjAem"
      >
        Most of my photos are licensed under
         
        <a
          aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
          class="sc-crXcEl lmkZeE"
          href="https://creativecommons.org/licenses/by-sa/3.0/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Creative Commons BY-SA 3.0
          <div
            class="sc-evZas gLzuUv"
          >
            <svg
              class="sc-iqcoie chQRol sc-breuTD ktuGc"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        .
        <br />
        If you are unsure about your right to use them please 
        <a
          class="sc-crXcEl lmkZeE"
          href="/contact"
        >
          contact me
        </a>
        .
      </span>
    </div>
  </div>
</div>
`;

exports[`<BlogRenderer /> should render correctly with ssrBlog 1`] = `
<div>
  <a
    class="sc-crXcEl lmkZeE page-title__link"
    href="/blogs"
  >
    ⇠ Blogs
  </a>
  <h1
    class="page-title__heading page-title__heading--with-link"
  >
    St. Ives ⛵ 2018
  </h1>
  <div
    class="blog-renderer__date"
  >
    <span
      class="sc-eCYdqJ iiRHQc sc-gKXOVf hCxNQk"
    >
      Published 
      TEST_DATE
    </span>
  </div>
  <div
    class="blog-renderer__tag-list"
  >
    <div
      class="sc-bjUoiL blog-renderer__tag"
    >
      <span
        class="sc-idiyUo ijulBS"
        type="travel"
      >
        Travel
      </span>
    </div>
  </div>
  <div
    class="markdown-renderer__outer"
  >
    <span
      class="sc-fnykZs kIjAem markdown-renderer__element markdown-renderer__paragraph"
    >
      Some content with 
      <a
        aria-label="a link (opens in a new tab)"
        class="sc-crXcEl lmkZeE"
        href="https://duckduckgo.com/"
        rel="noopener noreferrer"
        target="_blank"
      >
        a link
        <div
          class="sc-evZas gLzuUv"
        >
          <svg
            class="sc-iqcoie chQRol sc-breuTD ktuGc"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
            />
          </svg>
        </div>
      </a>
      <br />
    </span>
  </div>
  <div
    class="creative-commons__wrapper"
  >
    <div
      class="creative-commons__background"
    />
    <div
      class="subsection__outer creative-commons__inner"
    >
      <h3
        class="subsection__heading"
        id="copyright"
      >
        Copyright
      </h3>
      <span
        class="sc-fnykZs kIjAem"
      >
        Most of my photos are licensed under
         
        <a
          aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
          class="sc-crXcEl lmkZeE"
          href="https://creativecommons.org/licenses/by-sa/3.0/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Creative Commons BY-SA 3.0
          <div
            class="sc-evZas gLzuUv"
          >
            <svg
              class="sc-iqcoie chQRol sc-breuTD ktuGc"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        .
        <br />
        If you are unsure about your right to use them please 
        <a
          class="sc-crXcEl lmkZeE"
          href="/contact"
        >
          contact me
        </a>
        .
      </span>
    </div>
  </div>
</div>
`;
